More UI Upgrades
Replace Add Lane button with icon
Add hover tooltips to a few titles
Clean up overflowing titles to not wrap
Pretty up filters on mainbus

--- a/TODO.org
+++ b/TODO.org
@@ -5,8 +5,8 @@
 ** UI
 *** Fix Up / Down arrow to move to next empty lane in that direction.
 *** Make Region Selector use GeneralDialog
-*** Replace 'Add Lane' button with + that shows up where next lane will be
-*** Extend scroller up to top of region tab bar.
+**** Make Region selector pretty and use hexes?
+*** Move Region Info into left side of Main Bus Header
 ** Inserters
 *** Move items between areas
 *** Build more to increase the rate of transfer
