--- a/TODO.org
+++ b/TODO.org
@@ -14,6 +14,11 @@
 *** Scroll position on page
 *** Last page visited?
 *** Links?
+** Settings Panel!
+*** Debug Panel visibility
+*** State VM printing
+*** MainBus animations
+*** Others?
 ** Factory inventory upgrade -- Hold 2x required materials per factory
 ** Better UI for deleting belt lines
 ** Save progress during upgrades?
